--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"isDesktopOnly": false
+  "id": "obsidian-multi-cursor",
+  "name": "Extended Multi Cursor",
+  "version": "1.0.1",
+  "minAppVersion": "0.12.0",
+  "description": "This plugin adds to the default multi-cursor implementation.",
+  "author": "Oliver Fawcett",
+  "authorUrl": "http://ollyfg.com",
+  "isDesktopOnly": false
 }
