--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Extended Multi Cursor",
   "version": "1.0.1",
   "minAppVersion": "0.12.0",
-  "description": "This plugin adds to the default multi-cursor implementation.",
+  "description": "This plugin enhances the default multi-cursor implementation with Sublime Text style keybindings. It also allows you to click on an existing selection to de-select it.",
   "author": "Oliver Fawcett",
   "authorUrl": "http://ollyfg.com",
   "isDesktopOnly": false
