--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "0.12.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "node esbuild.config.mjs production"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/node": "^16.11.1",
-		"esbuild": "0.13.8",
-		"obsidian": "^0.12.17",
-		"tslib": "2.3.1",
-		"typescript": "4.4.4"
-	}
+  "name": "obsidian-multi-click",
+  "version": "0.1.0",
+  "description": "This plugin enhances the default multi-cursor implementation.",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "node esbuild.config.mjs production"
+  },
+  "keywords": [
+    "obsidian",
+    "multi-cursor"
+  ],
+  "author": "Oliver Fawcett",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.11.1",
+    "esbuild": "0.13.8",
+    "obsidian": "^0.12.17",
+    "tslib": "2.3.1",
+    "typescript": "4.4.4"
+  }
 }
